--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,18 @@
   <name>AmazonGCTest</name>
   <url>http://maven.apache.org</url>
 
+<build>
+<plugins>
+    <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+            <fork>true</fork>
+            <executable>C:\Program Files\Java\jdk1.8.0_161\bin\javac.exe</executable>
+        </configuration>
+    </plugin>
+</plugins>
+</build>
 <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		 <maven.compiler.source>1.6</maven.compiler.source>
